second version of CoverLetter.docx and the revised paper. The folder SGPRevised is generated by first copy the SGPRevisedVersion folder, and then tidy the files. The SGPRevisedVersion folder will never be touched. The subsequent editing will be on the SGPRevised folder.

--- a/SGPRevisedVersion/Content/apps.tex
+++ b/SGPRevisedVersion/Content/apps.tex
@@ -21,11 +21,11 @@ Our on-demand sketch-based segmentation algorithm is a general technique that ca
 \caption{Examples of shape variations created with our method. Given a segmented model (left), we can use one part as the query to retrieve similar parts from the database. The selected retrieved part is composited with the non-query parts to create a new shape (right) with the same layout as the original shape.}\label{fig:SegedAsInput}
 \end{figure}
 
-\paragraph*{Photo-driven part-based modeling.} \hl{Our algorithm can be used to ressemble the 3D shape in the photo. Given the photo, the use draw sketch, tracing the contour of the part, our method retrieves candidate parts from the database. The user select the appropriate parts and ressemble the 3D shape in the photo. Figure } \ref{fig:PhotoModeling}\hl{ shows an example.}
+\paragraph*{Photo-driven part-based modeling.} \hl{Our algorithm can be used to assemble the 3D shape in images. Given a photo with an object, the use draw sketches by tracing the contour of the parts of the shape in the photo. our method retrieves candidate parts from the database according to the user's sketch. The user selects the appropriate parts and assemble the 3D shape in the photo. Figure } \ref{fig:PhotoModeling}\hl{ shows an example.}
 
 \begin{figure}\centering
 \includegraphics[width=\linewidth]{./Material/PhotoDrivenModeling.pdf}
-\caption{Example of photo-driven part-based modeling. Given the photo (on the top left corner), the user sketches the contour of each part of the shape. Our method presents a ranked list of candidate parts. The user select the parts and ressemble the 3D shape.}\label{fig:SegedAsInput}
+\caption{Example of photo-driven part-based modeling. Given the photo (on the top left corner), the user sketches the contour of the parts of the shape. Our method extract parts from the database. The user selects the parts and assemble the 3D shape (middle) in the photo.}\label{fig:SegedAsInput}
 \end{figure}
 
 \paragraph*{Shape variation.} Our pipeline can be used to generate shape variations by simple adaption, as shown in Figure \ref{fig:SegedAsInput}. Given a segmented shape, we can use any part of the shape as a query to retrieve similar parts from the shape database. The chosen retrieved part can then be used to replace the original part to create shape variations. To extract a query contour from the source part, to be used as the 2D search key in our algorithm, we first perform Principal Component Analysis (PCA) on the part. Then, we take the view perpendicular to the plane containing the first and second principal directions of the part to calculate the query contour.
@@ -45,7 +45,7 @@ Our on-demand sketch-based segmentation algorithm is a general technique that ca
 \end{figure}
 
 \paragraph*{Multi-scale part suggestion.} Our system can suggest parts at various scales. Given a part \st{suggested} \hl{retrieved} by the method above, we perform normalized cuts~\cite{randomizedcutsfunkhousertog2008} on \hl{the SFG corresponding to the retrieved part} \st{its corresponding sub-SFG} to generate $T_n$ segments, each of which consists of a group of adjacent super-faces. $T_n$ is defined as:
-\[{T_n} = \frac{{w(Vol(P_M)-Vol\left( {{p_p})} \right)}}{{Vol\left( {{p_p}} \right)}},\] where $Vol\left( \cdot \right)$ is the volume of an object, $P_M$ is the retrieved database model, $p_p$ is the part in the database model corresponding to the query \hl{(corresponding part)}, and the weight $w = 2$. We constrain $T_n$ to lie between 1 and 7. We rank the segments in ascending order by their distance to the corresponding part. \hl{The distance is defined as the Euclidean distance between the OBB of the segment and the corresponding part.} Now, given a scale $S$, we can suggest the segments \st{with this scale} \hl{, whose distance to the corresponding part is less than or equal to $S$}. An example is given in Figure \ref{fig:MSPS}.
+\[{T_n} = \frac{{w(Vol(P_M)-Vol\left( {{p_p})} \right)}}{{Vol\left( {{p_p}} \right)}},\] where $Vol\left( \cdot \right)$ is the volume of an object, $P_M$ is the retrieved database model, $p_p$ is the part in the database model corresponding to the query \hl{(corresponding part)}, and the weight $w = 2$. We constrain $T_n$ to lie between 1 and 7. We rank the segments in ascending order by their distance to the corresponding part. \hl{The distance is defined as the Euclidean distance between the OBB of the segment and the corresponding part. Now, given a scale $S$, we can suggest the segments with this scale (the segments whose distance to the corresponding part is less than or equal to $S$)}. An example is given in Figure \ref{fig:MSPS}.
 
 \begin{figure}[t]\centering
 \includegraphics[width=1.05\linewidth]{./Material/MSPS.pdf}
