--- a/SGPRevisedVersion/Content/extraction.tex
+++ b/SGPRevisedVersion/Content/extraction.tex
@@ -50,11 +50,11 @@ To calculate the edge weight between two adjacent super-faces, we first accumula
 
 %--------------------------
 \subsection{Fuzzy Part Identification}
-As a first step, we use the SFG to extract a rough approximation of the part corresponding to a matched contour section. We can convert an open section to a closed one by drawing a line between its ends. This forms a natural perceptual boundary for the projection of the desired part. \hl{This process is repeated for each matched contour section.}
+As a first step, we use the SFG to extract a rough approximation of the part corresponding to a matched contour section. We can convert an open section to a closed one by drawing a line between its ends. This forms a natural perceptual boundary for the projection of the desired part.
 
 Now, we start with any super-face adjacent to the center of the contour and perform a flood fill, gathering all super-faces whose projections lie within the closed contour obtained above.
 
-We must handle several complications here. First, the contour section may be depth-discontinuous, spanning multiple isolated parts in 3D (Figure \ref{fig:ComplexCtour}(a)). Second, the contour section may enclose empty space that is not accounted for in the sketch (the blue and green sections in Figure \ref{fig:ComplexCtour}(b)). Third, the same sketch may match multiple instances of the same part (Figure \ref{fig:ComplexCtour}(c)). To address these issues, we filter out invalid parts and collapse multiple instances into a single part. \hl{The invalid parts generated with depth-discontinuous contour sections are identified by a group of nonadjacent super-faces. This kind of parts are discarded. The multiple instances of the same part (Figure }\ref{fig:ComplexCtour}\hl{(c)) are identified by the same sets of the super-faces. The repetitive instances are removed.}
+We must handle several complications here. First, the contour section may be depth-discontinuous, spanning multiple isolated parts in 3D (Figure \ref{fig:ComplexCtour}(a)). Second, the contour section may enclose empty space that is not accounted for in the sketch (the blue and green sections in Figure \ref{fig:ComplexCtour}(b)). Third, the same sketch may match multiple instances of the same part (Figure \ref{fig:ComplexCtour}(c)). To address these issues, we filter out invalid parts and collapse multiple instances into a single part. \hl{The invalid parts generated with depth-discontinuous contour sections are identified by a group of isolated super-faces. This kind of parts are discarded. The multiple instances of the same part (Figure }\ref{fig:ComplexCtour}\hl{(c)) are identified by matching the sets of the super-faces. The repetitive instances are removed.}
 
 \begin{figure}\centering
 \includegraphics[width=\linewidth]{./Material/ComplexCtour.pdf}
