--- a/SGPRevisedVersion/Content/intro.tex
+++ b/SGPRevisedVersion/Content/intro.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 
-Sketch-based interfaces provide an intuitive way to create and explore three-dimensional shapes~\cite{sketchbasedmodelingsurveycg2009}. Most shapes of interest can be drawn, and most humans grow up with at least rudimentary drawing skills~\cite{DeckerChildren1988}. Most humans cannot, however, draw very well. Hence, sketch-based interfaces need to interpret a crude drawing and map it to a detailed shape. \st{Typically, } \hl{A sifnificant stream is to tackle the problem }in a data-driven manner: each sketched component is used to search a repository for a high-quality shape with a matching part, which can be extracted and incorporated into the design.
+Sketch-based interfaces provide an intuitive way to create and explore three-dimensional shapes~\cite{sketchbasedmodelingsurveycg2009}. Most shapes of interest can be drawn, and most humans grow up with at least rudimentary drawing skills~\cite{DeckerChildren1988}. Most humans cannot, however, draw very well. Hence, sketch-based interfaces need to interpret a crude drawing and map it to a detailed shape. \st{Typically, this is done in a data-driven manner} \hl{This problem could be tackled in a data-driven manner}: each sketched component is used to search a repository for a high-quality shape with a matching part, which can be extracted and incorporated into the design.
 
 \begin{figure}[h!]
 \centering
